<resources>
    <string name="app_name">ThemeFrost</string>
    <integer name="com_vk_sdk_AppId">5210325</integer>

    <string name="button">Вход</string>
    <string name="title_logo">"ВКОНТАКТЕ
"<b>КИНОЗАЛ</b></string>
    <string name="my_video">Мои видеозаписи</string>
    <string name="error_message">"При загрузке данных произошла ошибка.
Проверьте подключение к интернету."</string>
    <string name="load_again"><u>Повторить попытку</u></string>
    <string name="empty_message">"Данные отсутсвуют или у вас
нет к ним доступа =("</string>
    <string name="my_video_added">Добавленные</string>
    <string name="my_video_with_me">Видео со мной</string>
    <string name="drawer_close">Меню закрыто</string>
    <string name="drawer_open">Меню открыто</string>
    <string name="off_ads">Отключить рекламу</string>
    <string name="configs">Настройки</string>
    <string name="logout">Выйти</string>
    <string name="albums">Альбомы</string>
    <string name="wall">Стена</string>
    <string name="catalog">Каталог</string>
    <string name="news">Новости</string>
    <string name="my_fave">Мои закладки</string>
    <string name="my_friends">Мои друзья</string>
    <string name="my_groups">Мои группы</string>
    <string name="search">Поиск</string>
    <string name="search_videos">Поиск видеозаписей</string>
    <string name="authorization_successfully">Успешно!</string>
    <string name="loading">Загрузка…</string>
    <string name="link_user_vk">vk.com/id%s</string>
    <string name="load_more">Загрузить еще</string>
    <string name="add_to_me">Добавить к себе</string>
    <string name="like">Мне нравится</string>
    <string name="repost">Себе на стену</string>
    <string name="translation_image">preview_image_animation_transition</string>
    <string name="share">Поделиться</string>
    <string name="prosmotr">%s просмотр</string>
    <string name="prosmotra">%s просмотра</string>
    <string name="prosmotrov">%s просмотров</string>
    <string name="_1080">1080</string>
    <string name="_240">240</string>
    <string name="_360">360</string>
    <string name="_480">480</string>
    <string name="_720">720</string>
    <string name="quality">Качество видео</string>
    <string name="cannot_open_this_video">"Извините, но плеер не может
воспроизвести это видео"</string>
    <string name="more_catalog">ЕЩЁ</string>
    <string name="album_video">%s видео</string>
    <string name="album_empty">Здесь нет альбомов</string>
    <string name="videos">Видеозаписи</string>
    <string name="retry">Retry</string>
</resources>
