<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/paddingContainer"
            android:orientation="vertical"
            android:paddingBottom="25.0dip"
            android:paddingTop="25.0dip">

            <TextView
                android:id="@+id/tvTitleVideo_VDI"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="1"
                android:maxLines="2"
                android:textColor="@android:color/white"
                android:textSize="19.0sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/rlOwnerContainer_VDI"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/paddingCardContainer">

                <ImageView
                    android:id="@+id/ivIconOwner_VDI"
                    android:layout_width="60.0dip"
                    android:layout_height="60.0dip"
                    android:layout_marginRight="10.0dip"
                    android:padding="7.0dip"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/tvTitleOwner_VDI"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4.0dip"
                    android:layout_toRightOf="@id/ivIconOwner_VDI"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="15.0sp" />

                <TextView
                    android:id="@+id/tvDateAdded_VDI"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTitleOwner_VDI"
                    android:layout_toRightOf="@id/ivIconOwner_VDI"
                    android:singleLine="true"
                    android:textColor="@color/white_transp"
                    android:textSize="13.0sp" />

                <TextView
                    android:id="@+id/tvCountSee_VDI"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvDateAdded_VDI"
                    android:layout_toRightOf="@id/ivIconOwner_VDI"
                    android:singleLine="true"
                    android:textColor="@color/white_transp"
                    android:textSize="12.0sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvDescription_VDI"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/paddingContainer"
                android:textColor="@color/white_transp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/paddingHalfCardContainer"
                android:paddingTop="@dimen/paddingHalfCardContainer">

                <TextView
                    android:id="@+id/tvRepost_VDI"
                    android:layout_width="wrap_content"
                    android:layout_height="40.0dip"
                    android:layout_margin="5.0dip"
                    android:background="@drawable/bg_white_selector"
                    android:gravity="center"
                    android:paddingBottom="8.0dip"
                    android:paddingLeft="12.0dip"
                    android:paddingRight="12.0dip"
                    android:paddingTop="8.0dip"
                    android:singleLine="true"
                    android:text="@string/repost"
                    android:textColor="@android:color/white"
                    android:textSize="15.0sp" />

                <LinearLayout
                    android:id="@+id/llLike_VDI"
                    android:layout_width="wrap_content"
                    android:layout_height="40.0dip"
                    android:layout_marginBottom="5.0dip"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="5.0dip"
                    android:background="@drawable/bg_white_selector"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8.0dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="8.0dip"
                        android:singleLine="true"
                        android:text="@string/like"
                        android:textColor="@android:color/white"
                        android:textSize="15.0sp" />

                    <ImageView
                        android:id="@+id/ivLikeImage_VDI"
                        android:layout_width="25.0dip"
                        android:layout_height="25.0dip"
                        android:src="@drawable/ic_like"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnAddToMe_VDI"
                style="@style/ButtonStyleInverse"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/paddingHalfCardContainer"
                android:text="@string/add_to_me" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>